--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,19 @@ body {
   margin: 0;
   text-align: center;
   font-family: 'Varela Round', sans-serif;
+  color: #70704A;
 }
 
 h1 {
-  padding-top: 50px;
+  padding-top: 20px;
+  font-size: 300%;
 }
+
+h2 {
+  font-size: 2rem;
+}
+
+
 
 .top-container {
   background-color: #efee9d;
@@ -16,17 +24,29 @@ h1 {
 
 .topcloud {
   position: absolute;
-right: 300px;
+  right: 170px;
+  top: 90px;
 }
 
 .cloud {
   position: absolute;
-  left: 200px;
+  left: 160px;
 }
 
-.middle-container{
-background-color: #B6BCF0;
+.middle-container {
+  background-color: #B6BCF0;
 }
+
 .bottom-container {
-    background-color:#C3F0AA;
+  background-color: #C3F0AA;
+}
+
+.logo {
+  height: 40%;
+  width: 40%;
+}
+
+.trampolina {
+  height: 65%;
+  width: 65%;
 }
