--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+/*elements*/
+
 body {
   margin: 0;
   text-align: center;
@@ -6,7 +8,7 @@ body {
 }
 
 h1 {
-  padding-top: 20px;
+  margin: 50px auto 0 auto;
   font-size: 300%;
 }
 
@@ -14,7 +16,7 @@ h2 {
   font-size: 2rem;
 }
 
-
+/* classes */
 
 .top-container {
   background-color: #efee9d;
